--- a/css/style.css
+++ b/css/style.css
@@ -955,7 +955,7 @@ h4 {
 	font-size: 160%;
 	padding: 0;
 	border-radius: 0px;
-	color: #F14E95; /*文字色*/
+	color: #FF7F50; /*文字色*/
 	font-wight: bold;
 	border-bottom: 2px dotted #36271a; /*下線の幅、線種、色*/
 	margin-bottom: 10px;
