--- a/css/price.css
+++ b/css/price.css
@@ -276,3 +276,14 @@
 		padding-bottom: 0px;
 	}
 }
+
+.limitted-price{
+	color: #2e3436;
+    background: linear-gradient(transparent 30%, #FFD700 20%);
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 26px;
+    text-align:center;
+    margin-bottom:10px auto;
+   
+}
