--- a/gallery/style.css
+++ b/gallery/style.css
@@ -184,14 +184,14 @@ body#admin #gallery_wrap {
 
 
 body#admin #gallery_list li{
-	width:100px;
-	height:140px;
+	width:200px;
+	min-height:300px;
 	border:1px solid #ccc;
 	float:left;
 	margin:0 5px 5px 0;
 	overflow:hidden;
 	padding:5px;
-	text-align:center;
+	text-align:left;
 	font-size:12px;
 	position:relative;
 		
