--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@
 *
 * ======================================================= */
 body {
-	font-family: "ƒqƒ‰ƒMƒmŠpƒS Pro W3", "Hiragino Kaku Gothic Pro", "ƒƒCƒŠƒI", Meiryo,
-		"‚l‚r ‚oƒSƒVƒbƒN", Verdana, Arial, Helvetica, sans-serif;
+	font-family: "Arial", "ƒqƒ‰ƒMƒmŠpƒS Pro W3", "Hiragino Kaku Gothic Pro",
+		"ƒƒCƒŠƒI", Meiryo, "‚l‚r ‚oƒSƒVƒbƒN", Verdana, Arial, Helvetica, sans-serif;
 	font-weight: 400;
 	font-size: 16px;
 	line-height: 1.7;
@@ -34,14 +34,13 @@ body {
 }
 
 a {
-	color: #F14E95;
+	color: #f57900;
 	-webkit-transition: 0.5s;
 	-o-transition: 0.5s;
-	transition: 0.5s;
 }
 
 a:hover, a:active, a:focus {
-	color: #F14E95;
+	color: #f57900;
 	outline: none;
 	text-decoration: none;
 }
@@ -66,6 +65,13 @@ a:hover, a:active, a:focus {
 
 @media screen and (max-width: 480px) {
 	.fh5co-cover {
+		height: 360px;
+		background-image: url(../images/top.jpg);
+	}
+}
+
+@media screen and (max-width: 440px) {
+	.fh5co-cover {
 		height: 440px;
 		background-image: url(../images/top.jpg);
 	}
@@ -73,20 +79,20 @@ a:hover, a:active, a:focus {
 
 @media screen and (max-width: 360px) {
 	.fh5co-cover {
-		height: 560px;
+		height: 480px;
 		background-image: url(../images/top.jpg);
 	}
 }
 
 @media screen and (max-width: 768px) {
 	.fh5co-cover.fh5co-cover-sm {
-		height: 400px;
+		height: 320px;
 	}
 }
 
 .fh5co-cover.fh5co-cover-sm .display-t, .fh5co-cover.fh5co-cover-sm .display-tc
 	{
-	height: 600px;
+	height: 520px;
 	display: table;
 	width: 100%;
 }
@@ -94,7 +100,7 @@ a:hover, a:active, a:focus {
 @media screen and (max-width: 768px) {
 	.fh5co-cover.fh5co-cover-sm .display-t, .fh5co-cover.fh5co-cover-sm .display-tc
 		{
-		height: 400px;
+		height:320x;
 	}
 }
 
@@ -593,8 +599,8 @@ form label {
 	/*   font-weight: bold; */
 	color: #F14E95;
 	/*  font-family: "Sacramento", Arial, serif; */
-	font-family: "ƒqƒ‰ƒMƒmŠpƒS Pro W3", "Hiragino Kaku Gothic Pro", "ƒƒCƒŠƒI", Meiryo,
-		"‚l‚r ‚oƒSƒVƒbƒN", Verdana, Arial, Helvetica, sans-serif;
+	font-family: "Arial", "ƒqƒ‰ƒMƒmŠpƒS Pro W3", "Hiragino Kaku Gothic Pro",
+		"ƒƒCƒŠƒI", Meiryo, "‚l‚r ‚oƒSƒVƒbƒN", Verdana, Arial, Helvetica, sans-serif;
 }
 
 @media screen and (max-width: 768px) {
@@ -603,13 +609,13 @@ form label {
 	}
 }
 
-/* .fh5co-heading span {
+.fh5co-heading span {
 	text-transform: uppercase;
 	font-size: 13px;
 	letter-spacing: 2px;
 	font-weight: 600;
 	color: rgba(0, 0, 0, 0.4);
-} */
+}
 
 @media screen and (max-width: 768px) {
 	#fh5co-footer .copyright .pull-left, #fh5co-footer .copyright .pull-right
@@ -728,8 +734,8 @@ form label {
 	.blog .more {
 		display: inline-block;
 		/* background: #F6C; */
-		border: 1px solid #F6C;
-		color: #F6C;
+		border: 1px solid #FF7F50;
+		color: #FF7F50;
 		vertical-align: middle;
 		font-size: 14px;
 		font-weight: bold;
@@ -743,8 +749,8 @@ form label {
 	.blog .more {
 		display: block;
 		background: #fff;
-		border: 2px solid #F6C;
-		color: #F6C;
+		border: 2px solid #FF7F50;
+		color: #FF7F50;
 		vertical-align: middle;
 		font-size: 14px;
 		padding: 8px 8px;
@@ -802,7 +808,7 @@ form label {
 		border: none;
 		display: block;
 		color: #333;
-		text-align: center;
+		
 		text-decoration: none;
 		font-size: 14px;
 	}
@@ -810,7 +816,7 @@ form label {
 		position: fixed;
 		bottom: 0;
 		left: 0;
-		background: #FFE4E1;
+		background: #FFFACD;
 		z-index: 9999999999;
 		-moz-opacity: 0.9;
 		opacity: 0.9;
@@ -880,13 +886,16 @@ h1.type1-1 {
 	margin-bottom: 30px;
 	position: relative;
 	padding: 5px;
-	background-color: #FFF0F5;
+	background-color: #FFFACD;
 }
 
 h1.type1-1 span {
+	background: url(../images/bee_orange.png) no-repeat left center;
+	background-size:35px 35px;
 	display: block;
 	padding: 10px;
-	border: 1px dashed #DB7093;
+	padding-left:35px;
+	border: 1px dashed #FF8C00;
 	color: #690303;
 }
 
@@ -901,7 +910,7 @@ h1.type1-1::before {
 	top: 100%;
 	left: 0;
 	border-width: 0 10px 10px 0;
-	border-right-color: #FFF0F5;
+	border-right-color: #FFFACD;
 }
 
 h1.type1-1::after {
@@ -909,37 +918,44 @@ h1.type1-1::after {
 	right: 0;
 	border-style: solid;
 	border-width: 0 15px 15px 0;
-	border-bottom-color: #FFF0F5;
+	border-bottom-color: #FFFACD;
 }
 
 h2.type2-1 {
 	font-size: 20px; /* •¶š‚Ì‘å‚«‚³ */
 	font-weight: bold; /* •¶š‚Ì‘¾‚³ */
 	color: #fff; /* •¶š‚ÌF */
-	border: 2px dashed #ffecef; /* ƒXƒeƒbƒ`‚Ì‘¾‚³Eí—ŞEƒJƒ‰[ */
-	background: #F9B8CD; /* ”wŒiF */
+	border: 2px dashed #FFFACD; /* ƒXƒeƒbƒ`‚Ì‘¾‚³Eí—ŞEƒJƒ‰[ */
+	background: #FFA07A; /* ”wŒiF */
 	border-radius: 8px; /* l‹÷‚ÌŠÛ‚İ */
-	box-shadow: 0 0 3px 3px #F9B8CD;
+	box-shadow: 0 0 3px 3px #FFA07A;
 	margin: 0 0 1.5em;
 	padding: 0.5em 0.8em;
+}
+h2.type2-1  span {
+	background: url(../images/bee.png) no-repeat left center;
+	background-size:35px 35px;
+	display: block;
+	padding-left:40px;
+	color: #690303;
 }
 
 h3 {
 	font-size: 16px;
 	padding: 1em;
-	border: 2px solid #F9C;
+	border: 2px solid #FF7F50;
 	border-radius: 3em .7em 2em .7em/.7em 2em .7em 3em;
-	color: #F6C;
+	color: #FF7F50;
 }
 
-h4{
-		background: none;
+h4 {
+	background: none;
 	-webkit-box-shadow: none;
 	box-shadow: none;
 	font-size: 160%;
 	padding: 0;
 	border-radius: 0px;
-	color: #F14E95; /*•¶šF*/
+	color: #FF7F50; /*•¶šF*/
 	font-wight: bold;
 	border-bottom: 2px dotted #36271a; /*‰ºü‚Ì•AüíAF*/
 	margin-bottom: 10px;
@@ -980,7 +996,80 @@ ul.shop-list li {
 	font-size: 18px;
 }
 
-.clear{
-	clear:both;
+.clear {
+	clear: both;
 }
+
+
+.icon-bee{
+	
 }
+
+
+/*--------------------------------
+Therapist
+---------------------------------*/
+
+.mybox{
+    background-color: #FFFFE0;
+    border-radius: 5px;
+    margin: 20px 5px;
+    padding: 30px 20px 20px 20px;
+    position: relative;
+    z-index: 0;
+    min-height:450px;
+}
+.mybox:before{
+    border: 1px solid #fff;
+    border-radius: 5px;
+    content: '';
+    display: block;
+    margin: 4px;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    z-index: -1;
+}
+.mybox:after{
+    background-color: rgba(249,223,213,0.9);
+    background-image: radial-gradient(#fff 20%, transparent 0), radial-gradient(#fff 20%, transparent 0);
+    background-position: 0 0, 8px 8px;
+    background-size: 15px 15px;
+    border-left: 2px dotted rgba(0,0,0,0.1);
+    border-right: 2px dotted rgba(0,0,0,0.1);
+    box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    content: 'Therapist';
+    display: block;
+    margin: 0 0 10px 0;
+    padding: 5px 20px;
+    text-align: center;
+    position: absolute;
+    top: -10px;
+    left: 20px;
+    transform: rotate(-3deg);
+    -moz-transform: rotate(-3deg);
+    -webkit-transform: rotate(-3deg);
+    -o-transform: rotate(-3deg);
+}
+
+.inner-box{
+    border-left: 4px solid #FA8072;
+    border-bottom: 1px solid #FA8072;
+    color: #FF8C00;
+   	margin:5px;
+   	padding:5px;
+    width:95%;
+}
+
+.inner-text{
+	padding-left:5px;
+	line-height:30px;
+}
+
+.margin0auto{
+	margin:0 auto;
+}
+
+
